# nauticuvs

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
cesarops-core/: .env.example  .gitignore  ai_director.py  analyze_crossref.py  andaste_geometry_test.py  audit_wrecks_db.py  b02_download.py  background_probe.py  batch_download_manager.py  bootstrap_xenon.sh  bridge_calibrate.py  bridge_proximity.py  cesarops-agent-context.md  cesarops_agent_runner.py  cesarops_comprehensive_schema.sql  cesarops_engine.py  cesarops_master.db  cesarops_orchestrator.py  check_landsat.py  cmr_search.py  config_agent.py  crossref_scans.py  cuda_env.py  database_connector.py  db_ingestor.py  deploy_and_scan.py  download_erie_multiyear.py  download_straits_2024.py  drive_identity.py  fetch_geometry_metadata.py  fix_and_add_wrecks.py  generate_report.py  hard_pixel_audit.py  hls_dl.py  hls_dl2.py  hls_download.py  hls_download2.py  hls_download3.py  init_database.py  inspect_geometry_metadata.py  (+34 more)
cesarops-core/.qwen/: settings.json
cesarops-core/Documents/: API_KEY_LOCATION.md  CODEBASE_STATUS.md  README2.md
cesarops-core/cesarops-slicer/: Cargo.toml
cesarops-core/cesarops-slicer/examples/: mission_lake_mi_monster.json
cesarops-core/cesarops-slicer/src/: lib.rs  main.rs  main.sync-conflict-20260406-201945-6M3Y37U.rs
cesarops-core/cesarops-slicer/src/io/: gdal_warp.rs  geotiff.rs  mod.rs  vrt.rs  watcher.rs
cesarops-core/cesarops-slicer/src/spec/: delegate.rs  mission.rs  mod.rs  sensor_meta.rs
cesarops-core/cesarops-slicer/src/tiles/: anchor.rs  mod.rs  slicer.rs  vrt_slicer.rs  vrt_slicer.sync-conflict-20260407-012158-6M3Y37U.rs
cesarops-core/models/: wreck_classifier.pkl  wreck_classifier_meta.json
cesarops-core/scripts/: check_xenon_cuda.py  cleanup_and_organize.py  dynamic_db_key.py  extract_oil_spills_kmz.py  full_lake_michigan_run.py  generate_db_master_key.py  inventory_all_files.py  inventory_geotiffs.py  populate_database.py  process_tiles.py  small_batch_test.py  wipe_database.py
cesarops-core/sensors/: sensor_master_list.json
cesarops-core/sensors/historical/: historical_alternates.json
cesarops-core/tauri/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
cesarops-core/tauri/src/: App.tsx  main.tsx  types.ts
cesarops-core/tauri/src-tauri/: Cargo.toml  tauri.conf.json
cesarops-core/tauri/src-tauri/capabilities/: default.json
cesarops-core/tauri/src-tauri/icons/icons/: icon.icns
cesarops-core/tauri/src-tauri/src/: erie_model.rs  kml_generator.rs  lib.rs  lib.sync-conflict-20260407-041708-6M3Y37U.rs  main.rs  nasa_agent.rs
cesarops-core/tauri/src/components/: AgentPanel.tsx  AutoBagPrompt.tsx  EriePanel.tsx  ExportPanel.tsx  ExtendedSensorsPanel.tsx  HarvesterPanel.tsx  LoranPanel.tsx  MagPipelinePanel.tsx  MapPanel.tsx  PDFBreakerPanel.tsx  RestorationPanel.tsx  ScanPanel.tsx  StatsPanel.tsx  UpdateChecker.tsx  WreckDetail.tsx  WreckList.tsx
cesarops-core/tauri/src/services/: api.ts  dialog.ts
cesarops-core/tauri/src/styles/: global.css
cesarops-wreckhunter build/: ai_director.py  tool_profiles.json
cesarops-wreckhunter build/tauri-app/src/components/: AIAgentConfig.jsx
src/: coeffs.rs  config.rs  fft.rs  forward.rs  inverse.rs  utils.rs  windows.rs
