[package]
name = "cesarops-slicer"
version = "0.1.0"
edition = "2021"
description = "Zero-copy memory-mapped GeoTIFF tile slicer with coordinate baking for CESAROPS distributed satellite analysis"
authors = ["CESAROPS"]

[[bin]]
name = "slicer"
path = "src/main.rs"

[dependencies]
memmap2 = "0.9"
tiff = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"
geo-types = { version = "0.7", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
rayon = "1.8"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
