[package]
name = "bagrecovery-frontend"
version = "1.0.0"
description = "Great Lakes Wreck Recovery Desktop Frontend"
authors = []
edition = "2021"
default-run = "bagrecovery-frontend"

[lib]
name = "bagrecovery_frontend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
