[package]
name = "cesarops-tauri"
version = "0.1.0"
description = "CESAROPS Wreck Recovery Desktop App"
authors = ["CESAROPS"]
edition = "2021"

[lib]
name = "cesarops_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6.1"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 1          # Fast build, small binary
lto = false
codegen-units = 16
